// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shorter than 6 value 1`] = `
Object {
  "info": Object {
    "description": "短すぎない",
    "id": "length_short",
    "notice": "5文字以下だと登録できないサイトがある",
  },
  "result": Object {
    "help": "3文字以下である",
    "rank": "C",
  },
}
`;

exports[`shorter than 6 value 2`] = `
Object {
  "info": Object {
    "description": "短すぎない",
    "id": "length_short",
    "notice": "5文字以下だと登録できないサイトがある",
  },
  "result": Object {
    "help": "4文字以上である",
    "rank": "A",
  },
}
`;

exports[`shorter than 6 value 3`] = `
Object {
  "info": Object {
    "description": "短すぎない",
    "id": "length_short",
    "notice": "5文字以下だと登録できないサイトがある",
  },
  "result": Object {
    "help": "6文字以上である",
    "rank": "S",
  },
}
`;
